[tool.poetry]
name = "beancount-importers"
version = "0.1.0"
description = "Upwork transactions CSV import for beancount"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.6"
beancount = "^2.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
